[ADD] estate_nursery : add culling class and separation class

--- a/estate_nursery/reports/reportplantation_prenursery_report.xml
+++ b/estate_nursery/reports/reportplantation_prenursery_report.xml
@@ -89,10 +89,10 @@
                              <tr>
                                  <tbody>
                                      <tr>
-                                         <td/><td/>
-                                         <td><span t-field="o.total_do"/> </td>
-                                         <td/>
-                                         <td><span t-field="o.total_planted"/> </td>
+                                         <!--<td/><td/>-->
+                                         <!--<td><span t-field="o.total_do"/> </td>-->
+                                         <!--<td/>-->
+                                         <!--<td><span t-field="o.total_planted"/> </td>-->
                                      </tr>
                                 </tbody>
                              </tr>
