--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -164,7 +164,7 @@
                                        <li>
                                         <a type="open">
 
-                                           Selection For <field name="batch_id"/>
+                                           Selection <field name="selection_code"/> For <field name="batch_id"/>
                                         </a>
                                        </li>
                                    </h4>
@@ -204,7 +204,7 @@
             <field name="arch" type="xml">
                 <tree string="Nursery selection View"
                       colors="red:state=='draft';red:state=='confirmed';green:state=='done'">
-                    <field name="batch_id" invisible="1"/>
+                    <field name="selection_code" string="Selection No"/>
                     <field name="variety" invisible="1"/>
                     <field name="stage" invisible="1"/>
                     <field name="selectionstage_id" />
@@ -255,11 +255,14 @@
 
                          <div class="oe_title" colors="blue">
                              <h1>
-                                <label string="Selection For Batch "
+                                 <label string="Selection For Batch "
                                        attrs="{'invisible': [('state','not in',('draft','sent','bid'))]}"/>
-                                <label string="Selection For "
+                                 <label string="Selection  "
                                        attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
-                                <field name="name" class="oe_inline" readonly="1" />
+                                 <field name="selection_code" class="oe_inline" readonly="1" />
+                                 <label string="For "
+                                       attrs="{'invisible': [('state','in',('draft','sent','bid'))]}"/>
+                                 <field name="batch_code" class="oe_inline" readonly="1" />
                              </h1>
                          </div>
 
